[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
